更改图片位置，新增机器质检

--- a/JD/机器质检.md
+++ b/JD/机器质检.md
@@ -1,41 +1,76 @@
-1.样本
+#### 1.样本
+未标注样本（8000个文件）：
+	![[dialog8000.xlsx]]
+	验收标准（暂行）：
 
-2.调研
+	1，验收方式：抽查
+	2，验收样本量：抽查30-50条
+	3，验收指标：
+	标注内容（问题/答案）是否准确
+	标注是否符合规范
+	是否有漏标
+	起止位置是否准确
+	验收标准：错误率达到10%-15%，不满足结账标准
+
+#### 2.调研
 2.1方案
 	![[Pasted image 20230905005239.png]]
 2.2现状
 历史机器质检结果对人工质检结果正确率：49条线索平均正确率44.6%，要达到机器质检替代人工质检的目标需要优化提高质检结果准确率。
-
 问题包括问题识别错误，问题段落划分错误，答案识别错误。这些问题的主要原因包括asr录音转文本误差，样本数量过少，人工规则覆盖面有限等。
 
 2.3历史机器质检case归类总结：
+	- ASR录音转文本错误 @产品同学
+	1、顾客的文本未分出来，包含在客服文本里，导致答案没分出来
+	2、极兔未转文本成功
+	- 顾客未回答，客服主观判断（22条/50条）
+	有客户未回答选项，这类问题可选择客户未回答，可以调研一下为什么质检员没有选择客户未回答而是主观判断填写 @产品同学 @算法同学
+	- 答案抽取错误 （4条）
+	1、顾客回答表单问题回答有的习惯带单位，有的习惯不带单位，如单量有的回答100左右吧，有的回答1000单，重量段有的习惯回答200斤，有的习惯回答200到300； 基于规则匹配加上单位漏识别，不加单位误识别，如重量段和货品价值和竞品价格都涉及到数量； 基于语义生成效果更好；
+	2、 几，十几，几百规则未覆盖
+	3、重量段和货品价值和竞品价格用规则判断容易混淆，语义识别准确率更高
+	- 问题抽取或段落切分错误
+	1、问题没有匹配到， 客户询问不规范基于规则没有匹配到，基于语义更好识别
+	2、两个问题之间的段落为当前问题的答案段落，当前取答案段落第一行作为段落切分结果
+	- 转义 （1条）
+	客户回答单量预估是20公斤，20公斤位于边界，如0-20，20-50选项都有20公斤，和一线或者产品侧协商这种情况要落到哪个区间
+#### 3.模型
 
-- ASR录音转文本错误 @产品同学
+#### 4 架构
+	![[Pasted image 20230910224539.png]]
+#### 4.1 asr话务录音转文本
+前置流程 : ASR录音转文本。
+京东科技每天将质检录音转化为文本，系统侧通过接口读取对应的录音转文本结果存储到ElasticSearch。
+ASR录音转文本存储结果如图所示：
+	![](https://apijoyspace.jd.com/v1/files/yMRw0zHTthVrfyUBIX2j/link)
+#### 4.2 机器质检问题答案识别
+#### 4.2.1 读取ES文本，文本预处理
+从ElasticSearch上读取质检文本， 再将其中的接口返回结果处理成客服和顾客问答的可用形式
+**ElasticSearch链接：**
+# ES【测试】
+spring.elasticsearch.rest.uris=http://es-nlb-es-4l2urvd5ft.jvessel-open-hb.jdcloud.com:9200
+spring.elasticsearch.rest.username=open-forecast-adjustment
+spring.elasticsearch.rest.password=91110108MA01E3926N_jdlsjcpbai
+spring.elasticsearch.index.asrAudioIndexName=human_asr_receipt_text
+索引：human_asr_receipt_text
+**预处理后文本如图所示：**
+	![](https://apijoyspace.jd.com/v1/files/1PrXLMjkWRh7lQCaU0br/link)
+#### 4.2.2 机器质检模型自动识别表单问题答案
+通过读取前置流程中的录音转文本并将ASR返回后系统侧存储到ES上的文本，并进行文本预处理，处理成机器质检模型可用的输入形式，然后通过机器质检问题识别和答案识别模型识别到质检表单问题和答案，模型结果存储到Hive，通过定时任务部署到线上，小流量分流到机器质检部分每天写入机器质检结果。
+#### 4.2.3 ChatGPT结果融合
+为提高机器质检准确率，可以将我们的问题答案识别模型结果和ChatGPT结果融合，输出重合的结果。
+目前ChatGPT是从文本中抽取出问题和对应问题答案的文本，我们的机器质检模型是从文本中识别到问题和对应问题答案的表单选项， 将ChatGPT结果文本转义后映射到答案表单选项，和我们的机器质检模型结果融合输出， 提高机器质检准确率。目前ChatGPT交付还在沟通中，可以先上线我们的问题答案识别模型结果，后续分期迭代，融合ChatGPT结果，逐步完善。
 
-1、顾客的文本未分出来，包含在客服文本里，导致答案没分出来
 
-2、极兔未转文本成功
-
-- 顾客未回答，客服主观判断（22条/50条）
-
-有客户未回答选项，这类问题可选择客户未回答，可以调研一下为什么质检员没有选择客户未回答而是主观判断填写 @产品同学 @算法同学
-
-- 答案抽取错误 （4条）
-
-1、顾客回答表单问题回答有的习惯带单位，有的习惯不带单位，如单量有的回答100左右吧，有的回答1000单，重量段有的习惯回答200斤，有的习惯回答200到300； 基于规则匹配加上单位漏识别，不加单位误识别，如重量段和货品价值和竞品价格都涉及到数量； 基于语义生成效果更好；
-
-2、 几，十几，几百规则未覆盖
-
-3、重量段和货品价值和竞品价格用规则判断容易混淆，语义识别准确率更高
-
-- 问题抽取或段落切分错误
-
-1、问题没有匹配到， 客户询问不规范基于规则没有匹配到，基于语义更好识别
-
-2、两个问题之间的段落为当前问题的答案段落，当前取答案段落第一行作为段落切分结果
-
-- 转义 （1条）
-
-客户回答单量预估是20公斤，20公斤位于边界，如0-20，20-50选项都有20公斤，和一线或者产品侧协商这种情况要落到哪个区间
-3.模型
-
+#### 5.指标
+|指标维度|机器质检质检准确率（转义后）|ChatGPT质检准确率（未转义，未转义需要转义映射成表单答案，会有准确率损失）|
+|单量|92%|86.4%|
+|重量|94%|95.5%|
+|价格|96%|88.6%|
+|竞品|86%|81.8%|
+|时效|88%|88.6%|
+|特殊需求|90%|95.5%|
+|邮寄物|86%|95.5%|
+人工质检当前准确率： 85% -95%
+智能质检当前准确率： 上述已评估50条样本质检准确率，待评估1000条样本智能质检准确率
+智能质检后续使用： 一次质检，二次质检，仲裁
