--- a/JD/质检面试讲解.md
+++ b/JD/质检面试讲解.md
@@ -56,8 +56,12 @@ macbert large：Bert预训练MLM的改进：
 三个分类全部为交叉熵损失，其标签Y_start,Y_end为长度为句子大小onehot的向量，Y_s,e为匹配标签，是个n * n的矩阵
 测试时，找到多个开始索引结束索引，再用索引匹配矩阵找到最大概率匹配的两个位置
 参数：24层，head=16 hidden=1024
-样本：
-训练：batch=4(说8也行) l_r=2e-5 max_len=384 epoch=2(说3也行)
+样本：question+context
+训练：batch=4(说8也行) l_r=2e-5 max_len=384 epoch=2(说3也行) 1个多小时
 预测：
 指标：acc
+
+### 1.3.4 T5
+
+### 1.3.5 GPT2
 
