--- a/面试/自然语言.md
+++ b/面试/自然语言.md
@@ -89,6 +89,7 @@ class CustomLLM(LLM):
 	def _call(self,  prompt: str, stop: Optional[List[str]] = None, run_manager: Optional[CallbackManagerForLLMRun] = None,  **kwargs: Any,  ) -> str:#返回模型调用字符串
 ```
 Baichuan2-7B-Chat
+结构：扩词表，sentence piece RoPE SwiGLU RMSNorm xFormers2注意力 混合精度训练 max-z loss 对logit值进行归一化 对齐：RLHF
 多轮对话样本stf
-epoch=3 maxlenth=1024
+epoch=3 maxlenth=1024 gpu=2
 部署：8 bit量化-8G
