--- a/JD/质检面试讲解.md
+++ b/JD/质检面试讲解.md
@@ -62,6 +62,19 @@ macbert large：Bert预训练MLM的改进：
 指标：acc
 
 ### 1.3.4 T5
-
+Transformer的编码解码结构 24层编码 解码，1024隐层 head=16  784M
+预训练：
+Replace Span代替Mask，长度为3，15%破坏比例
+多任务训练，每类任务包含特有的提示词
+样本：question+context
+微调：epoch=2 gpu=2 l_r=1e-4 batch=4 max_len=512 1小时
+评估：rouge1=10.52
+Rouge&BLEU，生成式模型的评估，分词后构成n-gram,分子是匹配数，分母：BLEU:生成的n-gram数，Rouge：正确答案的n-gram数
 ### 1.3.5 GPT2
+单向Transformer，适用于生成任务 增加数据集，参数（48层，隐向量1600），bpe分词 扩词表 1542M
+可加提示词
+样本：promote+context 数据增强扩量
+微调：l_r=e-4 epoch=2 batch=4 gpu=2 max_len=
+评估：和转义一起评估acc
+### 1.3.6 chatglm2
 
