--- a/JD/质检面试讲解.md
+++ b/JD/质检面试讲解.md
@@ -77,4 +77,7 @@ Rouge&BLEU，生成式模型的评估，分词后构成n-gram,分子是匹配数
 微调：l_r=e-4 epoch=2 batch=4 gpu=2 max_len=
 评估：和转义一起评估acc
 ### 1.3.6 chatglm2
-
+样本：问题提示词+全文本 label:全部抽取答案合并字典 场景单一，纯对话样本，无通用数据 5,6k
+结构：28个glm层（类transformer），multi-query注意力，旋转位置编码，swiGLU，RMSNorm归一化
+参数：lora微调 单卡 lr=1e-5 maxlen=1024 batch=16 fp16 epoch=4
+部署：单卡 8bit
