--- a/LLM/大模型微调-三件套.md
+++ b/LLM/大模型微调-三件套.md
@@ -5,7 +5,7 @@
 	c.为了防止直接更新Prefix的参数导致训练不稳定的情况，在Prefix层前面增加MLP结构
 	d.作用阶段:所有Transformer block的attention注意力计算
 	示图
-		![[Prefix示例.png]]
+		![[示例图片/Prefix示例.png]]
 
 2 Prompt-Tuning思想：
 	a.可视为Prefix-Tuning的简化版，只在输入层加入prompt token，并不需要加入MLP进行调整
