fix(image): show images

--- a/LLM/大模型微调-三件套.md
+++ b/LLM/大模型微调-三件套.md
@@ -5,15 +5,15 @@
 	c.为了防止直接更新Prefix的参数导致训练不稳定的情况，在Prefix层前面增加MLP结构
 	d.作用阶段:所有Transformer block的attention注意力计算
 	示图
-		![[示例图片/Prefix示例.png]]
+![Prefix-Tuning思想](images/Prefix示例.png)
 
 2 Prompt-Tuning思想：
 	a.可视为Prefix-Tuning的简化版，只在输入层加入prompt token，并不需要加入MLP进行调整
 	b.提出prompt Ensembling方法来集成预训练语言模型的多种prompts
 	c.只额外增加3.6%参数规模的情况下取得和全微调接近的效果
 	d.作用阶段：第一层transformer block的注意力计算
-	示图 
-		![[Pasted image 20230825005640.png]]
+	示图
+![Prompt-Tuning思想](images/20230825005640.png)
 
 3.虚拟token只做K V，不做Q
 4.大模型的prefixtuing的微调 都是用 transformers提供的peft库
@@ -24,39 +24,37 @@ finetune_prompt.py
 modeling_chatglm.py
 ![[modeling_chatglm 2.py]]
 示例
-	![[Pasted image 20230825011709.png]]
-	![[Pasted image 20230825011912.png]]
-[大模型参数高效微调技术原理综述（二）-BitFit、Prefix Tuning、Prompt Tuning - 知乎 (zhihu.com)](https://zhuanlan.zhihu.com/p/635686756)
+
+![](images/20230825011709.png)
+![](images/20230825011912.png)(https://zhuanlan.zhihu.com/p/635686756)
 [大模型参数高效微调技术原理综述（三）-P-Tuning、P-Tuning v2 - 知乎 (zhihu.com)](https://zhuanlan.zhihu.com/p/635848732)
 二 适配器
 1.结构
-	![[Pasted image 20230825013428.png]]
+![](images/20230825013428.png)
 为一resnet结构，微调时只微调adapter
 
 2.chatglm,peft都没有实现
 3.代码：finetune_adapter.py
-![[finetune_adapter.py]]
+![](code/finetune_adapter.py)
 示例：
-	![[Pasted image 20230825015355.png]]
-	![[Pasted image 20230825014843.png]]
+![](imaegs/20230825015355.png)
+![](images/20230825014843.png)
 	
-	 
- 
 4.适配器需单独保存，加载
 	保存：
-	![[Pasted image 20230825015817.png]]
+![](images/20230825015817.png)
 	加载：（手动改结构拼接）
-	![[Pasted image 20230825020024.png]] 
+![](images/20230825020024.png)
 
 三 Lora
 1.结构
-	![[Pasted image 20230826171919.png]] 
+![](images/20230826171919.png)
 
 2.r:线性代数中矩阵的秩（矩阵实际的维度）
 好处：节约内存
 
 3.初始化：为了模型一开始保持原状，初始化W0=A B=0，A=0 or B=0,一个正态分布，一个为0，但不能同时为0（梯度为0，参数不更新）
-	![[Pasted image 20230826172606.png]]
+![](images/20230826172606.png)
 
 4.参数量：原：h=Wx (h:m* 1,x:n* 1)
 lora:W0=A B (m* r+n* r<<mn)
@@ -78,7 +76,7 @@ r过大，对原有模型破坏越严重->产生灾难性遗忘（P-Tuning，Ada
 ![[finetune_lora.py]]
 
  示例：
-	![[Pasted image 20230826175249.png]]
+ ![](images/20230826175249.png)
 来源peft：peft.get_peft_model
 inference_mode:推理模式，是否训练；
 lora_alpha:W0前面的系数，Lora的权重（W+W0->W+alpha* W0）
@@ -109,9 +107,9 @@ lora_alpha:W0前面的系数，Lora的权重（W+W0->W+alpha* W0）
 
 如何生成一句话的概率：
 chatglm输入输出：
-	![[Pasted image 20230826222938.png]]
+![](images/20230826222938.png)
 思想：让一个空输入输出这句话
-	![[Pasted image 20230826223047.png]]
+![](images/20230826223047.png)
 	计算输出和目标之间各token的（信息熵）loss，取平均
 压缩：在相似句子中，优先选择信息熵（loss）高的句子
 
