fix(prefix-tuning): update

--- a/LLM/大模型微调-三件套.md
+++ b/LLM/大模型微调-三件套.md
@@ -2,7 +2,7 @@
 ## 1 Prefix-Tuning思想： 
 + 在每一层token之前构造一段任务相关的tokens作为Prefix，训练时只更新Prefix部分的参数，而Transformer中其他部分参数固定 
 + 一个Prefix模块就是一个可学习的id到embedding映射表，可在多层分别添加Prefix模块 
-+ 止直接更新Prefix的参数导致训练不稳定的情况，在Prefix层前面增加MLP结构 
++ 为了防止直接更新Prefix的参数导致训练不稳定的情况，在Prefix层前面增加MLP结构 
 + 作用阶段:所有Transformer block的attention注意力计算
 
 ![Prefix-Tuning思想](images/Prefix示例.png)
